<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable name="ChangeFragment" type="com.uma.upsoundrecorder.ui.changeaudio.ChangeAudioDetailsVM"/>
    </data>
    <LinearLayout
            android:id="@+id/ll_root_rename"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp10"
            android:padding="@dimen/dp10">
        <TextView
                android:id="@+id/txtOptions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/title"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/options"/>
        <TextView
                android:id="@+id/txtShareFile"
                android:text="@string/share"
                android:onClick="@{()->ChangeFragment.shareAudioFile()}"
                style="@style/renameDialugeFramentStyle"
        />
        <TextView
                android:id="@+id/txtRenameFile"
                android:text="@string/renameFile"
                android:onClick="@{()->ChangeFragment.renameAudioFile()}"
                style="@style/renameDialugeFramentStyle"
        />
        <LinearLayout
                android:id="@+id/ll_rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
        >
            <EditText
                    android:id="@+id/etxt_rename"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/newFileName"
                    android:inputType="text"
                    android:maxLength="15"
                    android:layout_marginRight="5dp"
            />
            <Button
                    android:id="@+id/btn_rename"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:onClick="@{()->ChangeFragment.renameFileButtonClick()}"
                    android:text="@string/rename"
                    android:textSize="@dimen/small"
                    android:textAllCaps="false"/>
        </LinearLayout>
        <TextView
                android:id="@+id/txtDeleteFile"
                android:text="@string/delete"
                android:onClick="@{()->ChangeFragment.deleteAudioFile()}"
                style="@style/renameDialugeFramentStyle"
        />
        <View android:layout_width="match_parent"
              android:layout_height="1dp"
              android:background="@android:color/black"
              android:layout_marginTop="@dimen/dp10"/>

        <TextView
                android:id="@+id/txtCancel"
                android:text="@string/cancel"
                style="@style/renameDialugeFramentStyle"
                android:gravity="end"
                android:onClick="@{()->ChangeFragment.cancelClick()}"
        />
    </LinearLayout>
</layout>